<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/menu_nova_requisicao"
        android:showAsAction="ifRoom"
        android:icon="@mipmap/ic_create_white_24dp"
        android:title="@string/label_nova_requisicao"
        />
    <item
        android:id="@+id/menu_sincronizar"
        android:title="@string/label_sincronizar"
        android:showAsAction="ifRoom"
         android:icon="@mipmap/ic_autorenew_white_24dp"/>

    <item
        android:id="@+id/menu_configuracoes"
        android:title="@string/label_configuracoes"
        />

    <item
        android:id="@+id/menu_sair"
        android:icon="@mipmap/ic_exit_to_app_white_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/label_sair"
       />
    <item
        android:id="@+id/menu_desconectar"
        android:title="@string/label_desconectar"
        />
</menu>
