<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.ufrn.imd.sgr.activities.DetalheRequisicaoActivity" >

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/label_paciente" android:text="@string/paciente" android:textStyle="bold"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/text_paciente"         />
            </LinearLayout>

            <TextView  android:paddingLeft="@dimen/text_margin" android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:drawableStart="@android:drawable/sym_action_call" android:gravity="end"
                android:onClick="telefonarLaboratorio"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"


                android:onClick="telefonarLaboratorio"
                android:orientation="vertical"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laboratorio"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_laboratorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"  />
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2" >
        <TableRow android:layout_marginTop="6dp">
            <TextView  android:text="@string/situacao_requisicao" android:textStyle="bold"/>
            <TextView android:text="@string/data_requisicao" android:textStyle="bold"/>
            <TextView android:text="@string/data_entrega"  android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/text_situacaoRequisicao"/>
            <TextView android:id="@+id/text_dataRequisicao"    android:layout_width="wrap_content" />
            <TextView android:id="@+id/text_dataFinal"    android:layout_width="wrap_content" />
        </TableRow>

    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  android:drawableBottom="@android:drawable/divider_horizontal_dim_dark"/>
    <ListView
        android:id="@+id/list_exames"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout >
